Basic project 06-cloudformation-vpc-ec2-asg-elb - Add Route 53 + architecture diagram

--- a/03-basic-projects/06-cf-vpc-ec2-asg-elb/cloudformation/vpc-ec2-asg-elb.yaml
+++ b/03-basic-projects/06-cf-vpc-ec2-asg-elb/cloudformation/vpc-ec2-asg-elb.yaml
@@ -78,6 +78,7 @@ Mappings:
       "AMI": "ami-0d081196e3df05f4d"
 
 #Conditions are used to control the creation of resources based on the input parameters or other conditions.
+#In this template, we are using a condition to check if the HostedZoneId and DomainName parameters are provided to create a Route 53 record.
 Conditions:
   CreateRoute53Record: !And
     - !Not [!Equals [!Ref HostedZoneId, ""]]
